# DOOM

./: .env.base  .env.docker  .gitignore  .gitmodules  CONTRIBUTING.md  README.md  doom.sh  oli_notes.md  oliver_notes.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: docker-image.yml
paper/: parse_logs.py
paper_locFromVid/: parse_logs.py
src/: MJDATA.TXT  MUJOCO_LOG.TXT  diagnose_network.sh  lowlevel_control.py  main.py  read_lowstate.py  setup_robot_network.sh  setup_vicon.sh  simulate.py  stand_go2.py  stand_go2_dds.py  standup_controller_pd.py
src/commands/: command_manager.py
src/controllers/: action_terms.py  controller_base.py  g1_gain_tuning_controller.py  mpc_controller.py  rl_balance_controller.py  rl_contact_bimanual_controller.py  rl_contact_controller.py  rl_contact_locomotion_controller.py  rl_controller.py  rl_controller_base.py  rl_reach_controller.py  rl_velocity_locomotion_controller.py  rl_waist_controller.py  stand_controller.py  state_publisher.py  state_publsiher.py
src/master_manager/: package.xml  setup.cfg  setup.py
src/plotjuggler/: g1_joint_torques.xml  go2_joint_torques.xml  hand_joints_smoothing.xml  object_states.xml  waist_joint_smoothing.xml
src/robot_interfaces/: real_robot_interface.py  robot_interface_base.py  sim_robot_interface.py  unitree_mujoco.py
src/robots/: __init__.py  robot_base.py
src/state_manager/: package.xml  setup.py  state_manager.py
src/state_manager/state_manager/: estimators.py  example_usage.py  handlers.py  msg_handlers.py  msg_publishers.py  obs_manager.py  observations.py  robot_state_publisher.py  state_manager.py  usage_example.py  vicon_subsciber.py
src/tasks/: task_configs.py
(+209 files in other folders)
