<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>state_manager</name>
  <version>0.0.0</version>
  <description>Centralized State Manager (Unitree Cyclone DDS/ROS2)</description>
  <maintainer email="shafeef.omar@tum.de">Shafeef Omar</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>unitree_go</depend>
  <depend>unitree_api</depend>
  <depend>std_msgs</depend>
  <depend>rosbag2_cpp</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>